--- a/index.html
+++ b/index.html
@@ -5,40 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
+    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/png">
 </head>
 <body>
-<header>
-    <figure>
-        <img src="./logo.png" alt="logo mighty ducks" width="100">
-    </figure>
-    <h1>Mighty Ducks Hockey League</h1>
-</header>
-<nav>
-    <a href="./">Home</a> |
-    <a href="./about.html">About MDHL</a> |
-    <a href="./contact.html">contact</a>
-</nav>
-<main>
-<section>
-    <figure>    
-        <img src="./hockey1.jpg" alt="hockey player" width="200">
-    </figure>
-    <h3>Upcoming Events</h3>
-    <article>
-        <p><strong><i>August 4</i></strong></p>
-        <p>MDSL Fundraiser</p>
-    </article>
-    <article>
-        <p><strong><i>August 16</i></strong></p>
-        <p>Season Kick-off: Meet the Teams</p>
-    </article>
-    <article>
-        <p><strong><i>September 1</i></strong></p>
-        <p>First Game of the Season (Check Game Schedule for details)</p>
-    </article>
-</section>
-</main>   
+    <header>
+        <div class="banner"><h1>Mighty Ducks Hockey League</h1></div>
+    </header>
+    <nav id="navposition">
+        <a href="./index.html">Home</a>
+        <a href="./assets/html/about.html">About</a>
+        <a href="./assets/html/contact.html">Contact</a>
+    </nav>
+    <main>
+        <h2 class="h2">Upcoming events</h2>
+        <article>
+            <img class="logo" src="./assets/img/logo.png" alt="logo" width="150">
+            <div class="inline">
+                <div class="text">
+                    <h3>August 4</h3>
+                    <p>MDSL Fundraiser</p>
+                </div>
+                <div class="text">
+                    <h3>August 16</h3>
+                    <p>Season Kick-off: Meet the Teams</p>
+                </div>
+                <div class="text">
+                    <h3>September 1</h3>
+                    <p>First Game of the Season (Check Game Schedule for details)</p>
+                </div>
+            </div>
+        </article>        
+    </main>
+    <footer>
+    </footer>   
 </body>
-<footer>
-</footer>
 </html>
