--- a/index.html
+++ b/index.html
@@ -12,30 +12,40 @@
     <header>
         <div class="banner"><h1>Mighty Ducks Hockey League</h1></div>
     </header>
-    <nav id="navposition">
+    <nav>
         <a href="./index.html">Home</a>
-        <a href="./assets/html/about.html">About</a>
-        <a href="./assets/html/contact.html">Contact</a>
+        <a href="./fschedule.html">Fall Schedule</a>
+        <a href="./rulespolicies.html">Rules</a>
+        <a href="./about.html">About</a>
+        <a href="./contact.html">Contact</a>
     </nav>
     <main>
-        <h2 class="h2">Upcoming events</h2>
-        <article>
-            <img class="logo" src="./assets/img/logo.png" alt="logo" width="150">
-            <div class="inline">
-                <div class="text">
-                    <h3>August 4</h3>
-                    <p>MDSL Fundraiser</p>
+        <section>
+            <h2 class="h2">Upcoming events</h2>
+        </section>
+        <section>
+            <article class="article">
+                <div class="container">
+                    <div>
+                        <img class="" src="./assets/img/logo.png" alt="logo" width="150">
+                    </div>
+                    <div>
+                        <div class="text">
+                            <h3>August 4</h3>
+                            <p>MDSL Fundraiser</p>
+                        </div>
+                        <div class="text">
+                            <h3>August 16</h3>
+                            <p>Season Kick-off: Meet the Teams</p>
+                        </div>
+                        <div class="text">
+                            <h3>September 1</h3>
+                            <p>First Game of the Season (Check Game Schedule for details)</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="text">
-                    <h3>August 16</h3>
-                    <p>Season Kick-off: Meet the Teams</p>
-                </div>
-                <div class="text">
-                    <h3>September 1</h3>
-                    <p>First Game of the Season (Check Game Schedule for details)</p>
-                </div>
-            </div>
-        </article>        
+            </article>
+        </section>  
     </main>
     <footer>
     </footer>   
