--- a/about.html
+++ b/about.html
@@ -14,41 +14,31 @@
     </header>
     <nav>
         <a href="./index.html">Home</a>
-        <a href="./fschedule.html">Fall Schedule</a>
-        <a href="./rulespolicies.html">Rules</a>
         <a href="./about.html">About</a>
         <a href="./contact.html">Contact</a>
+        <a href="./fschedule.html">Fall Schedule</a>
+        <a href="./rulespolicies.html">Rules</a>
+        <a href="./form.html">Registration</a>     
     </nav>
     <main>
-        <h2 class="h2">About</h2>
-        <article class="article">
-            <div class="container">
+        <div class="container">
+            <h2 class="h2">About</h2>
+            <div class="text"> 
+                    <img src="./assets/img/logo.png" alt="logo" width="100">
                 <div>
-                    <img class="" src="./assets/img/logo.png" alt="logo" width="150">
+                    <h3>Mision</h3>
+                    <p>To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of </p>
                 </div>
                 <div>
-                    <div class="text">
-                        <h3>Mision</h3>
-                        <p>To support young athletes living Chicago's northside neighborhood, who have an interest in</p>
-                        <p>learning and playing soccer, with opportunities to learn and practice skills related to the game of</p>
-                        <p>hockey, specifically those skills around team cooperation and good sportsmanship.</p>
-                    </div>
-                    <div class="text">
-                        <h3>Vision</h3>
-                        <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes</p>
-                        <p>through the building of character, self-discipline, and leadership.</p>
-                    </div>
-                    <div class="text">
-                        <h3>General Information</h3>
-                        <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing</p>
-                        <p>Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a</p>
-                        <p>member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside</p>
-                        <p>neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of</p>
-                        <p>parents and previous league members.</p>
-                    </div>
+                    <h3>Vision</h3>
+                    <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes through the building of character, self-discipline, and leadership.</p>
+                </div>
+                <div>
+                    <h3>General Information</h3>
+                    <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of parents and previous league members.</p>
                 </div>
             </div>
-        </article>                
+        </div>                
     </main>
     <footer>
     </footer>   
