--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <link rel="shortcut icon" href="./img/logo.png" type="image/png">
+    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/png">
 </head>
 <body>
     <header>
@@ -14,28 +14,26 @@
     </header>
     <nav>
         <a href="./index.html">Home</a>
-        <a href="./fschedule.html">Fall Schedule</a>
-        <a href="./rulespolicies.html">Rules</a>
         <a href="./about.html">About</a>
         <a href="./contact.html">Contact</a>
+        <a href="./fschedule.html">Fall Schedule</a>
+        <a href="./rulespolicies.html">Rules</a>
+        <a href="./form.html">Registration</a> 
     </nav>
     <main>
-        <h2 class="h2">Contact</h2>
-        <article class="article">
-            <div class="container">
-                <div class="boxarticle1">
-                    <img class="" src="./assets/img/logo.png" alt="logo" width="150">
-                </div>
-                <div class="boxarticle2">
-                    <div class="">
-                        <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-                        <p>We reply to your email as soon as we can.</p>
-                    </div>   
-                </div>
+        <div class="container">
+            <h2 class="h2">Contact</h2>
+            <div class="text">
+            <img src="./assets/img/logo.png" alt="logo" width="100">
+            <div>
+                <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+                <p>We reply to your email as soon as we can.</p>
             </div>
-        </article>
+            </div>
+        </div>                
     </main>
     <footer>
     </footer>   
 </body>
 </html>
+
