--- a/fschedule.html
+++ b/fschedule.html
@@ -7,106 +7,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fall Schedule</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/png">
 </head>
-
 <body>
+    <header>
+        <div class="banner"><h1>Mighty Ducks Hockey League</h1></div>
+    </header>
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./contact.html">Contact</a>
+        <a href="./fschedule.html">Fall Schedule</a>
+        <a href="./rulespolicies.html">Rules</a>
+        <a href="./form.html">Registration</a> 
+    </nav>
     <main>
-        <body>
-            <header>
-                <div class="banner"><h1>Mighty Ducks Hockey League</h1></div>
-            </header>
-            <nav>
-                <a href="./index.html">Home</a>
-                <a href="./fschedule.html">Fall Schedule</a>
-                <a href="./rulespolicies.html">Rules</a>
-                <a href="./about.html">About</a>
-                <a href="./contact.html">Contact</a>
-            </nav>
-            <main>
-                <div>
-                    <h2 class="h2">Fall Schedule</h2>
+        <div class="container">
+            <h2 class="h2">Fall Schedule</h2>
+            <table>
+                <caption>*All games take place on Saturday</caption>
+                <thead>
+                    <tr>
+                        <th>SEPTEMBER</th>
+                        <th>Teams</th>
+                        <th>Location</th>
+                        <th>Times</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td rowspan="2">9/01</td>
+                        <td>U1 and U4</td>
+                        <td>AJ Katzenmaier</td>
+                        <td>9:30 a.m.</td>
+                    </tr>
+                    <tr>
+                        <td>U3 and U2</td>
+                        <td>Greenbay</td>
+                        <td>1:00 p.m.</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/08</td>
+                        <td>U5 and U6</td>
+                        <td>Howard A Yeager</td>
+                        <td>9:30 a.m.</td>
+                    </tr>
+                    <tr>
+                        <td>U6 and U1</td>
+                        <td>Marjorie P Hart</td>
+                        <td>1:00 p.m.</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/15</td>
+                        <td>U2 and U4</td>
+                        <td>North</td>
+                        <td>9:30 a.m.</td>
+                    </tr>
+                    <tr>
+                        <td>U3 and U5</td>
+                        <td>AJ Katzenmaier</td>
+                        <td>1:00 p.m.</td>
+                    </tr>
+                    <tr>
+                        <td rowspan="2">9/22</td>
+                        <td>U1 and U3</td>
+                        <td>South</td>
+                        <td>9:30 a.m.</td>
+                    </tr>
+                    <tr>
+                        <td>U2 and U6</td>
+                        <td>Howard A Yeager</td>
+                        <td>1:00 p.m.</td>
+                    </tr>
+                    <tr>
+                        <td>9/29</td>
+                        <td>U4 and U5</td>
+                        <td>Greenbay</td>
+                        <td>9:30 a.m.</td>
+                    </tr>
+                </tbody>
+                </table>
+                <div class="container">
+                    <div class="iframe">    
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.7196175987524!2d-87.84787658454474!3d42.327178679189174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fecd0628e1bb5%3A0x9a4d5f9aafd42e02!2sMarjorie%20P%20Hart%20School!5e0!3m2!1ses-419!2sar!4v1675813114324!5m2!1ses-419!2sar" width="150" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.270062631387!2d-87.85606978454513!3d42.3154382791899!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675812988270!5m2!1ses-419!2sar" width="150" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11800.03949961564!2d-87.87763647342497!3d42.32098813257863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f933bce5af881%3A0x740a7a7d548adce1!2sGreen%20Bay%20School%20(Pre-K)!5e0!3m2!1ses-419!2sar!4v1675813081401!5m2!1ses-419!2sar" width="150" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.7196175987524!2d-87.84787658454474!3d42.327178679189174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fecd0628e1bb5%3A0x9a4d5f9aafd42e02!2sMarjorie%20P%20Hart%20School!5e0!3m2!1ses-419!2sar!4v1675813114324!5m2!1ses-419!2sar" width="150" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                    <article>
-                        <div class="container">
-                            <table>
-                                <caption>*All games take place on Saturday</caption>
-                                <thead>
-                                    <tr>
-                                        <th>SEPTEMBER</th>
-                                        <th>Teams</th>
-                                        <th>Location</th>
-                                        <th>Times</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td rowspan="2">9/01</td>
-                                        <td>U1 and U4</td>
-                                        <td>AJ Katzenmaier</td>
-                                        <td>9:30 a.m.</td>
-                                    </tr>
-                                    <tr>
-                                        <td>U3 and U2</td>
-                                        <td>Greenbay</td>
-                                        <td>1:00 p.m.</td>
-                                    </tr>
-                                    <tr>
-                                        <td rowspan="2">9/08</td>
-                                        <td>U5 and U6</td>
-                                        <td>Howard A Yeager</td>
-                                        <td>9:30 a.m.</td>
-                                    </tr>
-                                    <tr>
-                                        <td>U6 and U1</td>
-                                        <td>Marjorie P Hart</td>
-                                        <td>1:00 p.m.</td>
-                                    </tr>
-                                    <tr>
-                                        <td rowspan="2">9/15</td>
-                                        <td>U2 and U4</td>
-                                        <td>North</td>
-                                        <td>9:30 a.m.</td>
-                                    </tr>
-                                    <tr>
-                                        <td>U3 and U5</td>
-                                        <td>AJ Katzenmaier</td>
-                                        <td>1:00 p.m.</td>
-                                    </tr>
-                                    <tr>
-                                        <td rowspan="2">9/22</td>
-                                        <td>U1 and U3</td>
-                                        <td>South</td>
-                                        <td>9:30 a.m.</td>
-                                    </tr>
-                                    <tr>
-                                        <td>U2 and U6</td>
-                                        <td>Howard A Yeager</td>
-                                        <td>1:00 p.m.</td>
-                                    </tr>
-                                    <tr>
-                                        <td rowspan="2">9/29</td>
-                                        <td>U4 and U5</td>
-                                        <td>Greenbay</td>
-                                        <td>9:30 a.m.</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                            <div id="table">
-                                <div class="text">
-                                    <p><span>Facility Type: </span>Outdoor.</p>
-                                    <p><span>Additional Information: </span>If deemed necessary by MDHL games may be shortened</p>
-                                    <p>or cancelled due to extreme weather conditions.</p>
-                                </div>
-                                <div class="text">
-                                    <p><span>Please direct all questions to: </span>Michael Randall, League Coordinator</p>
-                                    <p><span>Phone:</span>(630) 690-8132</p>
-                                    <p><span id="email">Email:</span>michael.randall@chihockey.org</p>
-                                </div>
-                            </div>
-                        </div>
-                    </article>        
-            </main>
-            <footer>
-            </footer>   
-        </body>
-        </html>
+                <div class="tableinfo">
+                    <p><span>Facility Type: </span>Outdoor.</p>
+                    <p><span>Additional Information: </span>If deemed necessary by MDHL games may be shortened or cancelled due to extreme weather conditions.</p>
+                    <p><span>Please direct all questions to: </span>Michael Randall, League Coordinator</p>
+                    <p><span>Phone:</span>(630) 690-8132</p>
+                    <p><span>Email:</span>michael.randall@chihockey.org</p>
+                </div>
+                </div>
+        </div>    
+    </main>
+    <footer>
+    </footer>   
+    </body>
+</html>
