--- a/index.html
+++ b/index.html
@@ -14,40 +14,35 @@
     </header>
     <nav>
         <a href="./index.html">Home</a>
-        <a href="./fschedule.html">Fall Schedule</a>
-        <a href="./rulespolicies.html">Rules</a>
         <a href="./about.html">About</a>
         <a href="./contact.html">Contact</a>
+        <a href="./fschedule.html">Fall Schedule</a>
+        <a href="./rulespolicies.html">Rules</a>
+        <a href="./form.html">Registration</a> 
     </nav>
     <main>
-        <section>
+        <div class="container">
             <h2 class="h2">Upcoming events</h2>
-        </section>
-        <section>
-            <article class="article">
-                <div class="container">
+            <div>
+                <img src="./assets/img/logo.png" alt="logo" width="100">
+                <div class="text">
                     <div>
-                        <img class="" src="./assets/img/logo.png" alt="logo" width="150">
+                        <h3>August 4</h3>
+                        <p>MDSL Fundraiser</p>
+                        </div>
+                    <div>
+                        <h3>August 16</h3>
+                        <p>Season Kick-off: Meet the Teams</p>
                     </div>
                     <div>
-                        <div class="text">
-                            <h3>August 4</h3>
-                            <p>MDSL Fundraiser</p>
-                        </div>
-                        <div class="text">
-                            <h3>August 16</h3>
-                            <p>Season Kick-off: Meet the Teams</p>
-                        </div>
-                        <div class="text">
-                            <h3>September 1</h3>
-                            <p>First Game of the Season (Check Game Schedule for details)</p>
-                        </div>
+                        <h3>September 1</h3>
+                        <p>First Game of the Season (Check Game Schedule for details)</p>
                     </div>
                 </div>
-            </article>
-        </section>  
+            </div>
+        </div>
     </main>
     <footer>
-    </footer>   
+    </footer>
 </body>
 </html>
