--- a/rulespolicies.html
+++ b/rulespolicies.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rules of play and policies</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <link rel="shortcut icon" href="./img/logo.png" type="image/png">
+    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/png">
 </head>
 <body>
     <header>
@@ -14,61 +14,50 @@
     </header>
     <nav>
         <a href="./index.html">Home</a>
-        <a href="./fschedule.html">Fall Schedule</a>
-        <a href="./rulespolicies.html">Rules</a>
         <a href="./about.html">About</a>
         <a href="./contact.html">Contact</a>
+        <a href="./fschedule.html">Fall Schedule</a>
+        <a href="./rulespolicies.html">Rules</a>
+        <a href="./form.html">Registration</a> 
     </nav>
     <main>
-        <section class="title">
+        <div class="container">
             <h2 class="h2">Rules of play and policies</h2>
-            <h3>IHF rules shall govern MDHL play except as modified herein.</h3>
-        </section>
-        <section>
-            <article class="article">
-                <div class="containerrules" id="rules">
-                    <div>
-                        <h3><span>SPORTSMANSHIP</span></h3>
-                    </div>
-                    <div>    
-                        <p>The common interest that members of the Association share is to inspire</p>
-                        <p>youth to practice the ideals of sportsmanship and fair play. Any player, coach,</p>
-                        <p>team, parent, spectator, administratorof referee whose behavior detracts from</p>
-                        <p>this purpose is subject to disciplinary action regardless of technical hockey</p>
-                        <p>background, expertise, accomplishmentor standing.</p>
-                    </div>  
-                    <div>
-                        <h3><span>IHF FIELD REGULATIONS</span></h3>
-                    </div>
-                    <div>                      
-                        <ol>
-                            <li><span>DIMENSIONS.</span>IHF Law 1 provides for flexible external field dimensions within a given maximum and minimum width and length. These dimensions should be adhered to for all fields used by teams under 12 and older.</li>
-                            <li><span>COMPETITION FIELDS. </span>Fields used within the competition program must be a minimum of 100 x 60 yards.Leagues, districts or associations participating in the state competition program that are unable to provide a field that meets these minimum requirements must advise the State Competition Board which will assign its Fields Committee to inspect the field and recommend to the Board whether or not a waiver of the minimum dimensions should be granted. Teams from leagues, districts or associations that are unable to provide an acceptable field may be required to play all their games away.</li>
-                            <li><span>FIELDS USED BY YOUNG AGE GROUPS</span>
-                                <ol type="a">
-                                    <li>U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields for older age groups should be progressively larger.</li>
-                                    <li>U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
-                                    <li>U-10 play on a field 70-80 yards in length and 40-50 yards in width.</li>
-                                    <li>In addition, fields used by young age groups may have their internal dimensions and size of goal similarly modified.</li>
-                                  </ol>
-                            </li>
+            <h3>IHF rules shall govern MDHL play except as modified herein.</h3>            <div>
+                <h3><span>SPORTSMANSHIP</span></h3>
+            </div>
+            <div>    
+                <p>The common interest that members of the Association share is to inspire youth to practice the ideals of sportsmanship and fair play. Any player, coach, team, parent, spectator, administratorof referee whose behavior detracts from this purpose is subject to disciplinary action regardless of technical hockey background, expertise, accomplishmentor standing.</p>
+            </div>  
+            <div>
+                <h3><span>IHF FIELD REGULATIONS</span></h3>
+            </div>
+            <div class="list">                      
+                <div>
+                    <ol>
+                    <li><span>DIMENSIONS.</span>IHF Law 1 provides for flexible external field dimensions within a given maximum and minimum width and length. These dimensions should be adhered to for all fields used by teams under 12 and older.</li>
+                    <li><span>COMPETITION FIELDS. </span>Fields used within the competition program must be a minimum of 100 x 60 yards.Leagues, districts or associations participating in the state competition program that are unable to provide a field that meets these minimum requirements must advise the State Competition Board which will assign its Fields Committee to inspect the field and recommend to the Board whether or not a waiver of the minimum dimensions should be granted. Teams from leagues, districts or associations that are unable to provide an acceptable field may be required to play all their games away.</li>
+                    <li><span>FIELDS USED BY YOUNG AGE GROUPS</span>
+                        <ol type="a">
+                            <li>U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields for older age groups should be progressively larger.</li>
+                            <li>U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
+                            <li>U-10 play on a field 70-80 yards in length and 40-50 yards in width.</li>
+                            <li>In addition, fields used by young age groups may have their internal dimensions and size of goal similarly modified.</li>
                         </ol>
-                    </div>
-                    <div> 
-                        <div>
-                            <h3><span>ALL-PLAY</span></h3>
-                            <p>All-play means that every recreation player on every team shall play atleast</p>
-                            <p>fifty percent of each game. Coaches in the competition program are encouraged</p>
-                            <p>to play their players 50% of each game.</p>
-                        </div>
-                        <div>
-                        <ul>
-                            <li>A Coach shall be permitted to not play a player 50% of each game under special circumstances, e.g., unexcused absences from practice and/or games, ungentlemanly conduct at practice and/or games, and injuries.</li>
-                        </ul>
-                        </div>
+                    </li>
+                    </ol>
                 </div>
-            </article>
-        </section>  
+            </div> 
+            <div class="list">
+                <div>
+                <h3><span>ALL-PLAY</span></h3>
+                <p>All-play means that every recreation player on every team shall play atleast fifty percent of each game. Coaches in the competition program are encouraged to play their players 50% of each game.</p>              
+                <ul>
+                    <li>A Coach shall be permitted to not play a player 50% of each game under special circumstances, e.g., unexcused absences from practice and/or games, ungentlemanly conduct at practice and/or games, and injuries.</li>
+                </ul>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
